# CEG4195-Project

./: README.md
cad/: ESP32 Cap.stl  ESP32 Case.stl  readme.md
firmware/CEG4195Project/: CMakeLists.txt  platformio.ini  sdkconfig.esp32cam
firmware/CEG4195Project/components/: README.txt
firmware/CEG4195Project/components/edge_impulse/: CMakeLists.txt
firmware/CEG4195Project/components/edge_impulse/edge-impulse-sdk/: CMakeLists.txt
firmware/CEG4195Project/components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
firmware/CEG4195Project/components/edge_impulse/tflite-model/: tflite_learn_920661_4_compiled.cpp  tflite_learn_920661_4_compiled.h
firmware/CEG4195Project/src/: CMakeLists.txt  idf_component.yml  main.cpp
host-software/: add to printer.cfg  auto-blob-detect.py
